--- a/index.html
+++ b/index.html
@@ -1,21 +1,51 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My first website
-    </title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Rabiatu</h1><h1>
-        <i>"Welcome to Yummycrave"</i></h1>
-        <h2><p> where every bite is crafted to delight your taste buds with <b>mouthwatering flavors!</b> 
-         Dive into our menu and let us bring the joy of fresh, delicious food right to your door."</p></h2>
-         <h2>Our menu</h2>
-         <h3><i>Burger</i><br>
-         <i>Sharwama</i><br>
-         <i>Trifle</i><br>
-         <i>Pizza</i></h3>
-     
+   <h1>My Journey into Tech</h1> 
+
+<h2>From Curiosity to Coding</h2>
+
+<p>Meet Rabi, a young woman who recently decided to embark on a new and exciting journey into the world of <b>technology</b> and <b>coding</b>
+     She had always been curious about how websites and applications worked, but never imagined she would start learning how to build them herself.
+</p>
+
+<h3>The First Steps</h3>
+
+<p>Rabi began by learning the basics of HTML, the foundation of web development. She created her first web page, adding headings, paragraphs,
+and even formatting her text using <b>bold</b>,<i>italic</i>, and <u>underline</u> elements. <br> 
+<p>
+
+<p> Every new tag she learned brought a sense of accomplishment. <br>
+She quickly became comfortable with HTML elements and is eager to explore more. <br>
+Next on her list: learning more HTML elements and CSS to style her web pages!
+</p>
+
+<h3>Challenges and Growth</h3>
+
+<p>The journey wasn't always easy. Rabi encountered errors, bugs, and challenges that tested her patience. <b>But she never gave up</b>. 
+She knew that with every mistake, she was one step closer to becoming a confident coder. <br>
+</p>
+
+
+<p>At the end of this program, Rabi can build web pages and will slowly venture into <i>JavaScript </i> to make her projects interactive.
+</p>
+
+<h3>The Road Ahead</h3>
+
+<p>Rabi knows that the road to mastering tech is long, but she is excited for the future.
+ She's even started sharing her progress on social media to inspire others, 
+ especially other women, to dive into the world of coding.
+ </p>
+
+<h3>Conclusion</h3>
+
+<p>Rabi's journey is just beginning. With passion, determination, and the ability to <u>never stop learning</u>, she knows that the possibilities in tech are endless.</p>
+</h3>
 </body>
 </html>
